# password_manager

./: .gitignore  Cargo.toml  README.md
rust_code/: Cargo.toml
rust_code/src/: app.rs  cli.rs  crypt.rs  storage.rs
src/: app.rs  cli.rs  crypt.rs  error.rs  lib.rs  main.rs  session.rs  vault.rs
tests/: crypt_tests.rs  data_integrity_tests.rs  error_handling_tests.rs  session_integration_test.rs  vault_tests.rs
vault/: Cargo.toml
vault/src/: app.rs  cli.rs  main.rs  session.rs  storage.rs  vault.rs
