[package]
name = "rust_code"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }    # std allows conversion of argon2::password_hash::Error to StdError
base64 = "0.22"
chacha20poly1305 = "0.10"
rand = "0.8"
rpassword = "7.3"                                   # disable terminal echo while typing (hides password)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
